[package]
name = "external-analysis-lib-rs"
version = "0.1.0"
authors = ["Jacob Trueb <jtrueb@northwestern.edu>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "analysis_lib_rs"
crate-type  = ["lib"]

[dependencies]
cstr_core = "0.2.2"
cty = "0.2.1"
dotenv = "0.15.0"
env_logger = "0.8.2"
heapless = "0.6.0"
lazy_static = "1.4.0"
log = { version = "0.4.0", features=["release_max_level_trace", "max_level_trace"] }
rand_xorshift = "0.3.0"
rand_core = { version = "0.6.1", default-features = false }
spin = "0.7.0"

[dev-dependencies]
csv = "1.1"
serde = { version = "1.0.123", features = ["derive"] }
rand = "0.8.2"
assert_approx_eq = "1.1.0"

[target.'cfg(target_arch = "arm")'.dependencies]
alloc-cortex-m = "0.4.0"
cortex-m-rt = "0.6.13"

[target.'cfg(any(target_arch = "aarch64", target_arch="x86_64"))'.dependencies]
jemallocator = "*"